<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>nl.deltares.keycloak</groupId>
    <artifactId>deltares-extension</artifactId>
    <packaging>pom</packaging>
    <version>2.0</version>

    <properties>
        <keycloak.version>23.0.1</keycloak.version>
        <lombok.version>1.18.6</lombok.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
<!--        <runSuite>**/UnitTestSuite.java</runSuite>-->
    </properties>

    <modules>
        <module>deltares-extension-module</module>
        <module>deltares-extension-bundle</module>
        <module>deltares-integration-tests</module>
    </modules>
<!--    <repositories>-->
<!--        <repository>-->
<!--            <id>central</id>-->
<!--            <name>Maven Repository Switchboard</name>-->
<!--            <layout>default</layout>-->
<!--            <url>http://repo1.maven.org/maven2</url>-->
<!--            <snapshots>-->
<!--                <enabled>false</enabled>-->
<!--            </snapshots>-->
<!--        </repository>-->
<!--    </repositories>-->
    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-core</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-server-spi-private</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-server-spi</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-services</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
   	            <groupId>org.keycloak</groupId>
		        <artifactId>keycloak-model-jpa</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>		
	        </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>5.6.5.Final</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>8.0.28</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.surefire</groupId>
                <artifactId>maven-surefire-common</artifactId>
                <version>2.22.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-ear-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <includes>
<!--                        <include>${runSuite}</include>-->
                        <include>**/UnitTestSuite.java</include>
                        <include>**/IntegrationTestSuite.java</include>
                    </includes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>